# chesspresso

./: Cargo.toml  Dockerfile  README.md
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/db/migrations/: 0_init.sql
core/src/: db.rs  game.rs  lib.rs  message.rs  notice.rs  rating.rs
dapp/: Cargo.toml
dapp/src/: main.rs
indexer/: Cargo.toml
indexer/src/: inspect.rs  lib.rs
