[workspace.package]
version = "0.1.0"
authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]
edition = "2021"

[workspace]
resolver = "2"
members = [
    "client",
    "core",
    "dapp",
    "indexer",
]

[workspace.dependencies]
alloy = { version = "0.6", features = ["sol-types", "serde"] }
ansi_term = "0.12"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
derive_more = "1.0"
futures = "0.3"
glicko2 = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
itertools = { version = "0.13" }
openssl = "0.10"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
shakmaty = { version = "0.27" }
sqlx = { version = "0.8", features = ["sqlite"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
