[package]
name = "chesspresso-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chesspresso-core = { path = "../core" }
chesspresso-indexer = { path = "../indexer" }

alloy = { workspace = true, features = [
	"providers",
	"rpc",
	"rpc-types",
	"signers",
	"signer-local",
	"signer-mnemonic",
	"transports",
	"transport-http",
] }
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
