[package]
name = "dapp"
version.workspace = true
edition.workspace = true

[dependencies]
chesspresso-core = { path = "../core" }

alloy.workspace = true
anyhow.workspace = true
derive_more.workspace = true
futures.workspace = true
hex.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Use vendored openssl to simplify cross-compilation
openssl = { workspace = true, features = ["vendored"] }
