[package]
name = "chesspresso-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chesspresso-core = { path = "../core" }

alloy.workspace = true
anyhow.workspace = true
futures.workspace = true
hex.workspace = true
hyper.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
